test/tests/stages/9_functions/valid/arguments_in_registers/forward_decl_multi_arg.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[41]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(2)
  ,
  const int(1)
  )
  ;
  }
  int
  identifier(foo)
  (
  int
  identifier(x)
  ,
  int
  identifier(y)
  )
  {
  return
  identifier(x)
  -
  identifier(y)
  ;
  }
