test/tests/stages/9_functions/invalid_types/too_many_args.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  )
  {
  return
  identifier(a)
  +
  const int(1)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(1)
  ,
  const int(2)
  )
  ;
  }
